Correct vh to use svh to avoid layout shifts

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
 
   background: var(--color-white);
   min-height: 100vh;
+  min-height: 100svh;
   overflow-x: hidden;
 
   color: var(--color-black);
